# jobrecommender

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
recommender/: __main__.py  commands.py  constants.py  models.py  services.py
src/recommender/: __main__.py  commands.py  constants.py  input.py  logging_config.py  models.py  services.py
tests/: test_commands.py  test_input.py  test_models.py  test_services.py
